<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">菓速商城</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="navi_home">首页</string>
    <string name="navi_category">分类</string>
    <string name="navi_shoppingcart">购物车</string>
    <string name="navi_user">我的菓速</string>
    <string name="navi_setting">设置</string>
    <string name="search_hint">搜索商品</string>
    <string name="fruits">进口水果</string>
    <string name="seafood">进口海鲜</string>
    <string name="meat">肉类</string>
    <string name="fastfood">便当</string>
    <string name="bread">现烤烘培</string>
    <string name="snacks">进口零食</string>
    <string name="pre_sale">当季预售</string>
    <string name="team_buying">商企团购</string>
    <string name="label_products_size">规格：</string>
    <string name="label_products_promote">促销信息：</string>
    <string name="label_products_stock">库存：</string>
    <string name="label_products_number">数量：</string>
    <string name="label_rmb">¥&#160;</string>
    <string name="label_total">商品总价：</string>
    <string name="view_shoppingcart">查看购物车</string>
    <string name="confirm_order">填写并核对订单</string>
    <string name="select_address">送货地址</string>
    <string name="label_edit_address">填写送货地址</string>
    <string name="label_select_deliver_type">选择配送方式</string>
    <string name="label_select_pay_type">选择支付方式</string>
    <string name="label_pay_by_balance">使用余额支付</string>
    <string name="label_select_coupon">使用优惠券</string>
    <string name="label_pls_input">请输入</string>
    <string name="label_pls_select">请选择</string>
    <string name="label_order_freight">运费：</string>
    <string name="label_order_has_pay">使用余额：</string>
    <string name="label_order_should_pay">应付金额：</string>
    <string name="label_yuan">元</string>
    <string name="label_amount">金额：</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="load_data_from_net_title" />
    <string name="load_data_from_net_message">正在读取数据，请稍后&#8230;</string>
    <string name="load_data_from_net_error">提示</string>
    <string name="devlier_type_today">当日达</string>
    <string name="devlier_type_tomorrow">次日达</string>
    <string name="devlier_type_now">及时达</string>
    <string name="title_deliver_type">配送方式</string>
    <string name="title_payment_type">支付方式</string>
    <string name="title_select_province">选择省</string>
    <string name="title_select_city">选择市</string>
    <string name="title_select_district">选择区</string>
    <string name="label_name">名称</string>
    <string name="label_address_name">地址名称</string>
    <string name="label_province">省</string>
    <string name="label_city">市</string>
    <string name="label_area">区</string>
    <string name="label_street">详细地址</string>
    <string name="label_street_hint">街道门牌号</string>
    <string name="label_recipients">收货人</string>
    <string name="label_recipients_hint">收货人姓名</string>
    <string name="label_phone">手机</string>
    <string name="label_phone_hint">收货人手机</string>
    <string name="label_phone_num_hint">手机号</string>
    <string name="label_password_hint">输入密码</string>
    <string name="label_repassword_hint">再次输入密码</string>
    <string name="label_verify_code_hint">输入6位验证码</string>
    <string name="send_verify_code">发送验证码</string>
    <string name="login">登    录</string>
    <string name="register">注    册</string>
    <string name="submit">提    交</string>
    <string name="clear_data">清除数据</string>
    <string name="clear_data_summary">清除缓存数据和用户购物车</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_payment">PaymentActivity</string>
    <string name="prompt">提示</string>
    <string name="add_address">新建地址</string>
    <string name="edit_address">修改地址</string>
    <string name="commit">提交</string>
    <string name="thanks_for_buy">感谢您购买</string>
    <string name="order_is_executing">订单正在处理中&#8230;</string>
    <string name="back">返回</string>
    <string name="pay_success">支付成功</string>
    <string name="logout">退出登录</string>
    <string name="title_activity_my_order">MyOrderActivity</string>
    <string name="title_activity_my_collection">MyCollectionActivity</string>
    <string name="user_my_order">&#160;&#160;我的订单</string>
    <string name="user_my_colletion">&#160;&#160;我的收藏</string>
    <string name="user_my_address">&#160;&#160;我的地址</string>
    <string name="user_my_address_title">我的地址</string>
    <string name="user_my_charge">&#160;&#160;现金卡充值</string>
    <string name="label_order_date">下单日期：</string>
    <string name="label_buy_num">购买数量：</string>
    <string name="label_input_card_num">请正确输入充值卡密</string>
    <string name="label_recharge">使用现金卡充值</string>
    <string name="system_out">退出</string>
    <string name="goods_detail">商品详情:</string>
    
    <!-- 我增加的内容 -->
    <string name="forget_password">忘记密码</string>
    <string name="label_newpasd_hint">输入新密码</string>
    <string name="label_newpasd_confirm_hint">确认新密码</string>
  	<string name="msg_modifypasddone">修改完成</string>
  	<string name="label_tuijian_hint">选填：推荐人账号</string>
  	<string name="user_my_coupop">&#160;&#160;优惠券</string>
  	<string name="label_select_bonus">使用优惠券</string>
  	<string name="label_order_bonus">使用优惠券&#160;：</string>
  	<string name="user_my_jifen">&#160;&#160;我的积分</string>
  	<string name="label_select_integral">使用积分</string>
  	<string name="label_integral">使用积分&#160;:</string>
  	
    

</resources>
