<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical" >
        <View style="@style/login_line" />
        
        <EditText       
            style="@style/confirm_order_text_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:background="@null"
            android:hint="@string/label_phone_num_hint"
            android:id="@+id/et_fragment_phone_number"
            android:inputType="phone" >
              
        </EditText>

        <View style="@style/confirm_order_line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <EditText      
                style="@style/confirm_order_text_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="18dp"
                android:layout_weight="5"
                android:background="@null"
                android:hint="@string/label_verify_code_hint"
                android:inputType="number"
                android:id="@+id/et_fragment_verify_code" 
                android:maxLength="6" />
              
            <Button
                
                style="@style/btn_green"
                android:layout_width="0dp"
                android:layout_marginTop="0dp"
                android:layout_weight="4"         
                android:id="@+id/btn_fragment_send_verify_code"     
                android:text="@string/send_verify_code" />
             
        </LinearLayout>

        <View style="@style/login_line" />
        <Button   
	       style="@style/btn_green"
	       android:layout_marginLeft="5dp"
	       android:layout_marginRight="5dp"	
	       android:id="@+id/btn_fragment_checkinfo_submit"
	       android:text="@string/submit" />
           
    </LinearLayout>
</LinearLayout>
